[package]
name = "repline"
description = "A Readline-like multiline editor for easy REPLication"
repository = "https://github.com/boxdyn/repline"
version = "0.0.9"
authors = ["John <j@soft.fish>"]
edition = "2024"
license = "MIT"

[dependencies]
crossterm = { version = "0.29.0", default-features = false }
